# lacpd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  lacpd.spec  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: README.md  ci.yml  release.yml  test-workflow.yml
src/lacpd/: __init__.py  actor.py  main.py  packet.py  utils.py
tests/: __init__.py  run_test.sh  test_actor.py  test_bond.sh  test_inject.sh  test_integration_inject.py  test_main.py  test_packet.py  test_utils.py
